sftp: Allow seeking when opening for append

Although it has no effect, allow seeking when opening a file for append
to allow programs to write to files opened for append through the fuse
backend without failing with ENOTSUPP.
This is similar to POSIX behavior which allows seeking on a file opened
with O_APPEND.

https://bugzilla.gnome.org/show_bug.cgi?id=608910